--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -2,38 +2,33 @@
 <!--
 ### Paper ###
 
-1a) start by writing up Bayes ordinal CPM for continuous outcome (i.e. extensions to prior spec to deal with large # of intercepts). 
+Bayes ordinal CPM for continuous outcome (i.e. extensions to prior spec to deal with large # of intercepts). 
 
--> Use model with dirichlet and several concentration params
-for n # distinct obs/categories
+Use model with dirichlet and several concentration params for n = # distinct obs/categories
 alpha=1/n
 alpha=0? (NO! stan_polr and ord_mod1 don't work w/ improper alpha=0 conc. param)
 alpha=1/2 (multinomial Jeffrey's prior)
 alpha=1 ('uniform' prior)
 alpha=1/(0.8 + 0.35 max(n, 3)) (conc param from Frank's sims)
 
-Appendix showing derivation of posterior, what prior will be equivalent to MLE
+compare Bayes CPM to NPMLE? - repro and compare orm() vignette, but not in paper
 
-other possible priors
--> truncated normal (McKinley 2015)
--> parameterization on differences in intercepts or log difference in intercepts?
-e.g. alternate parameterization delta_1=log(gamma_1); delta_j=log(gamma_j-gamma_{j-1}) from Albert & Chib 1997, Fahrmeir & Tutz 1994, Ishwaran 2000 or just gamma_j-gamma_{j-1}
--> Congdon 2005 describes truncated normal and reparameterized
+-> posterior predictive checks? Bayesian p-value or other Bayesian model checking
 
-1c) simulations comparing Bayes CPM to NPMLE? - need to verify models are similar, especially in case where likelihood not well approximated by quadratic function
-
-1d) simulations showing posterior predictive checks? Bayesian p-value or other Bayesian model checking
-
-1e) Case study with HIV data. Add model checking steps
+-> Case study with HIV data. Add model checking steps
 
 TO DO
-- Clean up section describing basic Bayesian ordinal model
+- add more semiparametric Bayesian model examples in intro
 
-- Write section on extension to continuous, 'proof' related to priors for intercepts/heuristic argument?
+- justify/explain differences and contribution of Bayesian CPM vs. other semiparametric Bayesian models
+
+- add more justification/recommendations for prior choice
+-> explore overall objective prior approach of Berger to find/justify conc parameter 
+
 
 lower priority 
-lower priority -> 1b) figure out why hardcoded stan model doesn't match stan_polr when alpha=1, 0.5, 0.2, 2, 5, 1/ncat (other vals?), 
--> maybe change hardcoded stan model to est. cutpoints when all x are at their means (rather than all x=0 which I think is in implementation as of 10/10/19)
+-> figure out why hardcoded stan model doesn't match stan_polr when alpha=1, 0.5, 0.2, 2, 5, 1/ncat (other vals?), 
+-> change hardcoded stan model to est. cutpoints when all x are at their means (rather than all x=0) or mean-center all covars? 
 -> could also be related to parameterization of betas in stan_polr
 
 ### R package ###
@@ -41,22 +36,31 @@ lower priority -> 1b) figure out why hardcoded stan model doesn't match stan_pol
 TO DO
 
 - add formula interface
-- note about centering predictors OR automatic centering of predictors (see brms and rstanarm which both do this)
-- clean up & update CDF, Mean, Quantile to accept list like rms::contrast rather than newdata data.frame to facilitate comparisons?
 - figure out Stan issue with non-symmetric link function 
 - add vignette using all examples from orm() documentation
-- verify priors are correct (Jacobian for induced dirichlet? See Betancourt ordinal regression blog post) - DONE, don't need Jacobian if using pw_log_lik function as in stan_polr, also see  STAN User's guide 2.18.0 - 16.2 Reparameterizations and 16.3
+- note about centering predictors OR automatic centering of predictors (see brms and rstanarm which both do this)
+- clean up & update CDF, Mean, Quantile to accept list like rms::contrast rather than newdata data.frame to facilitate comparisons?
+
+- verify priors are correct (Jacobian for induced dirichlet? See Betancourt ordinal regression blog post) - DONE, don't need Jacobian if using pw_log_lik function as in stan_polr, also see STAN User's guide 2.18.0 - 16.2 Reparameterizations and 16.3
 --use roxygen function notation similar to 'Copula modeling with R' - DONE
 
-- code for basic simulations
--- extend to more iterations or other scenarios (see Yuqi and Qi papers?) 
--- make sure model is working well in basic scenario; compare to NPMLE
-using Bias, coverage, other statistics?
 
-lower priority -> implement CPM models in OpenBUGS??
+lower priority 
+-> implement alternative CPM models 
+OpenBUGS
 -- see http://www.omori.e.u-tokyo.ac.jp/WinBUGS/index.htm ex 14, 15, maybe 16
 -- see https://gist.github.com/bartneck/038fae866e10641b8121679cd02db52e
 -- see http://www.openbugs.net/Examples/Inhalers.html
+-- Congdon book models
+
+Other Stan models
+e.g. Betancourt, Goodrich
+
+MATLAB
+mods from Johnson & Albert
+
+PyMC3
+https://discourse.pymc.io/t/ordered-probit-model-for-ordinal-data/1308
 
 -->
 
@@ -116,13 +120,14 @@ other lower priority issues/future extensions:
 
 Cumulative models for ordinal outcomes -- traditionally denoted cumulative link models [@agresti_categorical_2002] -- have been discussed extensively in the literature using both classical (frequentist) and Bayesian implementations. Since these models are characterized by adding probabilities, not link functions, we prefer the nomenclature cumulative probability model (CPM). Under the frequentist paradigm, Walker and Duncan [@walker_estimation_1967] and McCullagh [@peter_mccullagh_regression_1980] described these models as an extension of dichotomous outcome regression models: logistic and probit regression are most well-known examples. A Bayesian CPM for ordinal regression was first detailed by Albert and Chib [@albert_bayesian_1993; @albert_bayesian_1997] and Johnson and Albert [@johnson_ordinal_1999]. Additional Bayesian CPM extensions including partial proportional odds [@peterson_partial_1990], mixture link models [@lang_bayesian_1999], location-scale ordinal regression [citation] and multivariate ordinal outcomes are described by Congdon [@congdon_bayesian_2005]. In all these settings, the number of ordered outcome categories is implicitly assumed to be smaller -- often much smaller -- than the sample size. However, continuous data are also ordinal and can therefore be fit using CPMs. 
 
-Harrell [@harrell_regression_2015] and Liu [@liu_modeling_2017] describe an approximate non-parametric maximum likelihood estimation (NPMLE) for continuous outcomes using CPMs. The models have several favorable characteristics including invariance of regression coefficient estimates to monotonic outcome transformations and ability to handle mixed continuous and discrete outcomes such as those that arise from a lower or upper limit of detection. In addition CPMs directly model the full conditional cumulative distribution function (CDF); this allows estimates of conditional means, quantiles, and exceedance probabilities to be calculated from a single model fit.
+In the continuous data setting, Liu et al. [@liu_modeling_2017] demonstrate the equivalence between CPMs and transformation models of the form:
+\begin{equation}
+Y=H(\beta^{T}X+\varepsilon) \quad \text{where} \quad \varepsilon \sim F_{\varepsilon}
+\end{equation}
+where $H(\cdot)$ is an increasing function, $\beta$ a vector of regression coefficients, $X$ a vector of covariates, and $\varepsilon$ are errors distributed according to $F_{\varepsilon}$. Harrell [@harrell_regression_2015] and Liu et al. [@liu_modeling_2017] describe approximate non-parametric maximum likelihood estimation (NPMLE)
+for the unspecified transformation $H(\cdot)$ and $\beta$ parameters. The models have several favorable characteristics including invariance of regression coefficient estimates to monotonic outcome transformations and ability to handle mixed continuous and discrete outcomes such as those that arise from a lower or upper limit of detection. In addition CPMs directly model the full conditional cumulative distribution function (CDF); this allows estimates of conditional means, quantiles, and exceedance probabilities to be calculated from a single model fit. Further, because only the $H(\cdot)$ part of the model is nonparametric, CPMs are semiparametric regression models which balance the robustness of fully nonparametric models and the efficiency of fully parametric models.
 
-[Add section describing other Bayesian semiparametric models 
-Gelfand - Approaches for semiparametric Bayesian regression 
-Mallick - A Bayesian semiparametric transformation model incorporating frailties  
-Song - Semiparametric transformation models with Bayesian P-splines 
-Hanson - Bayesian Semiparametric Proportional Odds Models]
+There is an extensive literature on Bayesian semiparametric regression models. The aim -- stated by Gelfand [@gelfand_approaches_1999] in his discussion of general approaches for these models -- is, ``to enrich the class of standard parameteric hierarchical models by wandering nonparametrically near (in some sense) the standard class but retaining the linear structure.'' For example, Song & Lu [@song_semiparametric_2012] develop a semiparametric transformation nonlinear mixed model which estimates the transformation, $H(\cdot)$, and also incorporates possible nonlinear relationships between $X$ and $\beta$ as well as random effects using Bayesian P-splines. In the context of survival data, Mallick & Walker [@mallick_bayesian_2003] describe a linear transformation model where the transformation, $H(\cdot)$ and the error distribution, $F_{\varepsilon}$, are estimated nonparametrically using mixtures of incomplete beta functions and a Pólya tree distribution, respectively; Hanson and colleagues [@damien_surviving_2013;@hanson_bayesian_2007] describe other Bayesian nonparametric survival models. [addt'l citations, including Ibrahim Bayesian Survival Analysis]
 
 <!-- DESCRIBE PROBLEMS/GAPS in literature using previous methods here and how we solve them
 - contrasts and other functionals?
@@ -130,10 +135,9 @@ Hanson - Bayesian Semiparametric Proportional Odds Models]
 - similar strengths to Bayesian Survival - check there for addt'l benefits
 -->
 
-In this paper, we develop Bayesian CPMs for continuous and mixed outcomes. Bayesian CPMs inherit many of the properties of CPMs estimated using NPMLE and have additional benefits: interpretation using posterior probabilities, the ability to incorporate available prior information, and exact inference (within simulation error) <!--when the log-likelihood is not well-approximated by a quadratic function [!! need to show example where this is the case in simulations]-->
+In this paper, we develop Bayesian CPMs for continuous and mixed outcomes. [They are distinguished from other Bayesian semiparametric approaches by their relationship to traditional ordinal regression models? something else?]. Bayesian CPMs inherit many of the properties of CPMs estimated using NPMLE and have additional benefits: interpretation using posterior probabilities, the ability to incorporate available prior information, and exact inference (within simulation error) <!--when the log-likelihood is not well-approximated by a quadratic function [!! need to show example where this is the case in simulations]-->
 for quantities of interest without asymptotic approximations.
-A primary challenge when implementing Bayesian CPMs for continuous outcomes is the specification of priors for the intercept parameters and we describe several proposed strategies. Through simulations, we explore characteristics of Bayesian CPMs using several model specifications and prior combinations<!--and make comparisons to CPM estimates using NPMLE and Bayesian nonparametric (BNP) regression, another popular approach for flexibly modeling outcomes-->. We present a case study involving HIV biomarker data for which the outcomes are skewed and censored at a lower limit of detection.
-We conclude with a discussion -- including advantages, current limitations, and extensions -- and recommendations for using Bayesian CPMs.
+A primary challenge when implementing Bayesian CPMs for continuous outcomes is the specification of priors for the intercept parameters and we describe several proposed strategies. Through simulations, we explore characteristics of Bayesian CPMs using several model specifications and prior combinations<!--and make comparisons to CPM estimates using NPMLE and Bayesian nonparametric (BNP) regression, another popular approach for flexibly modeling outcomes-->. We present a case study involving HIV biomarker data for which the outcomes are skewed and censored at a lower limit of detection. We conclude with a discussion -- including advantages, current limitations, and extensions -- and recommendations for using Bayesian CPMs.
 
 # Methods
 
@@ -232,13 +236,22 @@ Where $j=1,\ldots,J-1$, $g(\cdot)$ is the pdf of the distribution $G(\cdot)$, an
 \end{vmatrix}
 \end{equation}
 
-While it is possible to define separate $\alpha_j$ parameters for each category, we restrict our attention to symmetric Dirichlet distributions which use a single $\alpha$ value for all categories (i.e., $\alpha_1 = \alpha_2 = \cdots = \alpha_J$). The symmetric Dirichlet prior on $\boldsymbol{\pi_{.}}$ along with the transformation $h(\cdot)$ induces a prior for the $\boldsymbol{\gamma}$ with $\boldsymbol{\alpha}$ controlling the concentration of the induced prior. Figure \@ref(fig:probit-induced) shows induced $\boldsymbol{\gamma}$ priors assuming a probit link for several combinations of concentration parameter and number of categories. The priors are approximately distributed around the intercepts that result under an assumption of equal probability for all categories when $\boldsymbol{\beta}=\boldsymbol{0}$; that is, for $J=n$ $G^{-1}(\sum_{k=1}^j 1/n)=G^{-1}(j/n)=\hat{\gamma}_{j|X=0}$. <!--multinomial-Dirichlet in sec 3.4 of BDA3 -->The choices correspond to several options for a multinomial-Dirichlet model [@gelman_bayesian_2014]: a uniform Dirichlet ($\boldsymbol{\alpha}=1$), the multivariate Jeffrey's prior ($\boldsymbol{\alpha}=1/2$), an overall objective prior recommended by Berger et al. [@berger_overall_2015] ($\boldsymbol{\alpha}=1/J$), and two additional reciprocal formulas ($\boldsymbol{\alpha}=1/(2+(J/3))$ and $\boldsymbol{\alpha}=1/(0.8+0.35J)$). As the number of categories increases the fixed $\boldsymbol{\alpha}$ priors more strongly favor intercepts assuming equal probability for all categories; the reciprocal priors are adjusted to maintain the same degree of concentration relative to the equal probability intercepts.
+While it is possible to define separate $\alpha_j$ parameters for each category, we restrict our attention to symmetric Dirichlet distributions which use a single $\alpha$ value for all categories (i.e., $\alpha_1 = \alpha_2 = \cdots = \alpha_J$). The symmetric Dirichlet prior on $\boldsymbol{\pi_{.}}$ along with the transformation $h(\cdot)$ induces a prior for the $\boldsymbol{\gamma}$ with $\boldsymbol{\alpha}$ controlling the concentration of the induced prior. Figure \@ref(fig:probit-induced) shows induced $\boldsymbol{\gamma}$ priors assuming a probit link for several combinations of concentration parameter and number of categories. The priors are approximately distributed around the intercepts that result under an assumption of equal probability for all categories when $\boldsymbol{\beta}=\boldsymbol{0}$; that is, for $J=n$ the values $G^{-1}(\sum_{k=1}^j 1/n)=G^{-1}(j/n)=\hat{\gamma}_{j|X=0}$. <!--multinomial-Dirichlet in sec 3.4 of BDA3 -->The choices correspond to several options for a multinomial-Dirichlet model [@gelman_bayesian_2014]: a uniform Dirichlet ($\boldsymbol{\alpha}=1$), the multivariate Jeffrey's prior ($\boldsymbol{\alpha}=1/2$), an overall objective prior recommended by Berger et al. [@berger_overall_2015] ($\boldsymbol{\alpha}=1/J$), and two additional reciprocal formulas ($\boldsymbol{\alpha}=1/(2+(J/3))$ and $\boldsymbol{\alpha}=1/(0.8+0.35J)$). As the number of categories increases the fixed $\boldsymbol{\alpha}$ priors more strongly favor intercepts assuming equal probability for all categories; the reciprocal priors are adjusted to maintain the same degree of concentration relative to the equal probability intercepts.
 
 In multiparameter models, the choice of reference prior depends on the parameter or statistic of interest (e.g. $\beta$, conditional CDF, conditional mean) [@berger_overall_2015].  Without prior information, we seek a value of $\boldsymbol{\alpha}$ with minimal impact on inference for a variety of settings and quantities of interest while still producing posterior estimates that can be well sampled by the MCMC algorithm.
+
+Model checking ...
+<!--
+[Describe posterior predictive checks, Bayesian p-value or some additional Bayesian model checking]
+
+[section describing how models were actually fit, i.e. used HMC implemented in Stan, JAGS, etc?]
+-->
 
 The model in (\ref{eq:post}) is implemented using the `R` interface to Stan [@stan_development_team_rstan:_2018] which performs MCMC sampling using Hamiltonian Monte Carlo.
 
 [Note: the Berger et al. manuscript provides an approach for determining an 'overall objective prior' more systematically, but may be difficult to implement if interested in posterior parameters and functions of parameters (mean, CDF, quantiles) simultaneously]
+
+
 
 
 ```{r probit-induced, fig.cap="Induced $\\boldsymbol{\\gamma}$ priors under $G^{-1}(\\cdot)=\\Phi^{-1}(\\cdot)$", fig.align='center', out.width='95%'}
@@ -248,8 +261,6 @@ knitr::include_graphics(file.path(wd,"fig","probit_induced_mle.png"))
 
 <!--
 [possible choices Uniform 1, Jeffrey's 1/2, Objective?? $\alpha_j =\frac{1}{J}$ for all $j$, 1/(0.8 + 0.35 * max(n, 3))]. 
-
-We explore several choices of prior with a goal of fin
 
 (prior predictive distribution - first draw params from Dirichlet, then draw cdf vals see BDA3 p 7, plot ranks on x-axis and cdf val on y-axis)
 
@@ -357,19 +368,19 @@ The second model then sets values of $Y<1$ to 1 to produce a mixed discrete/cont
 
 A Bayesian CPM using three $\boldsymbol{\alpha}$ concentration hyperparameters for $p(\boldsymbol{\pi_{.}}|\boldsymbol{\alpha})$ with the properly specified probit link was fit to each simulated dataset across the two outcome models. <!-- For comparison, the NPMLE CPM model [and the BNP model for residuals] were also fit to each dataset. --> We examine the average percent bias of the posterior median for parameters $\beta_1$ and $\beta_2$ and five posterior median $\gamma_j$ parameters corresponding to $y$ values $\boldsymbol{y}=\{y_1=e^{-1},y_2=e^{-0.33},y_3=e^{0.5},y_4=e^{1.33},y_5=e^2\}$. We also calculate average percent bias of the conditional CDF for $\boldsymbol{y}$ when $X_1=1$ and $X_2=1$, the conditional median at $X_1=1$ and $X_2=1$, and the conditional mean and 20$^{th}$ percentile for the uncensored outcome simulations. 
 
+<!-- compare using Bias, coverage, RMSE, other statistics? -->
+
 <!--
-additional sims
+Additional sims
 
 case where likelihood not well approximated by quadratic function (ie NPMLE doesn't work well but Bayes CPM works)?
 
-weird shapes (i.e. mixture distributions); mixture continuous/discrete (lower limit of detection) - see Yuqi's paper for ideas
+weird shapes (i.e. mixture distributions); mixture continuous/discrete (lower limit of detection) - see Yuqi's paper and Song paper for ideas
+
+try more complex mix of continuous and categorical (e.g. categorical below threshold and above threshold? may not work without modified multiple detection limit likelihood)
 -->
 
-<!--
-[Describe posterior predictive checks, Bayesian p-value or some additional Bayesian model checking]
 
-[section describing how models were actually fit, i.e. used HMC implemented in Stan, JAGS, etc?]
--->
 
 ## Case Study
 
@@ -397,7 +408,6 @@ knitr::include_graphics(file.path(wd,"fig","sim_param_full2.png"))
 ```{r simplt-pars2, fig.cap="Bias in parameters for censored simulations", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_param_cens2.png"))
 ```
-
 
 Figures \@ref(fig:simplt-cdf1) and \@ref(fig:simplt-cdf2) show the bias in the posterior conditional CDF.
 
